# crosci

./: .gitignore  demo.py  flake.nix  pyproject.toml  renovate.json  setup.py
.github/workflows/: publish.yml  release.yml
src/crosci/: biomarkers.py
