[project]
name = "crosci"
description = "Biomarkers of Critical Oscillations"
authors = [
    { name = "Richard Hardstone", email = "richard.hardstone@gmail.com" },
    { name = "Arthur-Ervin Avramiea", email = "a.e.avramiea@vu.nl" },
    { name = "Marina Diachenko", email = "dsgvmarina@gmail.com" },
    { name = "Emre Cebi", email = "emre@cebi.io" },
]
maintainers = [
    { name = "Arthur-Ervin Avramiea", email = "a.e.avramiea@vu.nl" },
    { name = "Emre Cebi", email = "emre@cebi.io" },
]
readme = "README.md"
license = "LicenseRef-AcademicPublic"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = ["cython", "joblib", "mne", "numpy", "scipy"]
dynamic = ["version"]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/Critical-Brain-Dynamics/crosci"

[tool.setuptools]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools", "cython", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pre-commit", "ruff", "cibuildwheel"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.cibuildwheel]
before-build = "rm -rf {package}/build"
skip = "*-musllinux_aarch64 *-musllinux_i686 *-musllinux_x86_64"

[tool.cibuildwheel.macos]
environment = { LIBOMP_GITHUB = "1", MACOSX_DEPLOYMENT_TARGET = "10.9" }
before-all = [
    "git clone https://github.com/llvm/llvm-project.git",
    "cd llvm-project/openmp",
    "mkdir build",
    "cd build",
    "cmake -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ ..",
    "make",
    "sudo make install",
]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"
